[package]
name = "turtle_time"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"]        # ToDo: you are the author 
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Location", # for getting args from query string
] }
serde_qs = "0.12"
wasm-bindgen = "0.2"
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_sprite",
    "png",
    "x11",
] }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.15" }
bevy_ggrs = { version = "0.12" }
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
bevy-inspector-egui = "0.18.3"
bytemuck = { version = "1.7.3", features = ["derive"] }
ggrs = { version = "0.9.4" }
rand = { version = "0.8.3" }
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
