[package]
name = "turtle_time"
version = "0.12.0"
publish = false
authors = ["Mike Eder <mikedernet@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# WASM requirements
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.14.0", features = ["wasm-bindgen"] }
js-sys = { version = "0.3" }
web-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2.89" }
wasm-bindgen-futures = { version = "0.4.39" }

# Main requirements
[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_sprite",
    "png",
    "x11",
    "webgl2",
] }
bevy_kira_audio = { version = "0.18" }
bevy_asset_loader = { version = "0.18" }
bevy_ggrs = { version = "0.14.0" }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
bevy-inspector-egui = "0.21"
bytemuck = { version = "1.7.3", features = ["derive"] }
ggrs = { version = "0.10.0", features = ["sync-send"] }
percentage = { version = "*" }
rand = { version = "0.8.3" }
rand_seeder = { version = "0.2.3" }
rand_pcg = { version = "*" }
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
